all routes now documented
