# src/models/post.ts
@@ -2,6 +2,8 @@ import { number } from "joi";
 import mongoose from "mongoose";
 
 
+
+let STATUSES=["publish","draft"];
 //create a post schema
 let postSchema = new mongoose.Schema(
     {
@@ -9,7 +11,7 @@ let postSchema = new mongoose.Schema(
         content: { type: String },
         tags: { type: Array },
         summary: { type: String },
-        status: { type: String, default: "publish" },
+        status: { type: String, default: "publish",enum:STATUSES },
         comment_count: { type: Number, default: 0 },
         like_count: { type: Number, default: 0 },
         author_id: { type: Number },
