# src/swagger.json
@@ -23,27 +23,15 @@
         "tags": [
           "Authors"
         ],
-        "summary": "Login an author...",
+        "summary": "Login an author",
         "description": "",
         "parameters": [
           {
-            "name": "email",
-            "in": "query",
-            "description": "The email for login",
-            "required": true,
-            "type": "string",
+            "name": "obj",
+            "in": "body",
+            "description": "<p>If the login process is successful, an access token is returned.    You can use this token to access various endpoints of the API.    The token expires in 24 hours.</p>",
             "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "password",
-            "in": "query",
-            "description": "The password for login",
-            "required": true,
-            "type": "string",
-            "schema": {
-              "type": "string"
+              "$ref": "#/definitions/loginUser"
             }
           }
         ],
@@ -55,7 +43,7 @@
         "tags": [
           "Authors"
         ],
-        "summary": "Register a new author...",
+        "summary": "Register a new author",
         "description": "",
         "parameters": [
           {
@@ -75,9 +63,66 @@
         "tags": [
           "Authors"
         ],
-        "summary": "Get a list of all the authors...",
-        "description": "",
+        "summary": "Get a list of all the authors",
+        "description": "<p><span style=\"color:red;\"><b>Note:</b></span> Only admins have the authority to do this.</p>",
         "parameters": [],
+        "responses": {}
+      }
+    },
+    "/authors/{authorId}": {
+      "get": {
+        "tags": [
+          "Authors"
+        ],
+        "summary": "Get an author by id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      },
+      "put": {
+        "tags": [
+          "Authors"
+        ],
+        "summary": "Update an existing author",
+        "description": "<p>Only an author with valid access token can update their details.</p>",
+        "parameters": [
+          {
+            "name": "authorId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/updateUser"
+            }
+          }
+        ],
+        "responses": {}
+      },
+      "delete": {
+        "tags": [
+          "Authors"
+        ],
+        "summary": "Delete an existing author",
+        "description": "<p><span style=\"color:red\"><b>Note:</b></span> Only admins have the authority to delete an author.</p>",
+        "parameters": [
+          {
+            "name": "authorId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {}
       }
     },
@@ -87,7 +132,7 @@
           "Posts"
         ],
         "summary": "Get all the blog posts",
-        "description": "<p>The GET request only returns all the blogs written by the logged in author or user.</p>",
+        "description": "<p>The GET request only returns all the blogs written by the author or user.</p>",
         "parameters": [],
         "responses": {}
       },
@@ -196,10 +241,232 @@
         "parameters": [
           {
             "name": "status",
-            "schema": {
-              "$ref": "#/definitions/statuses"
-            },
+            "type": "query",
+            "description": "Status value that need to be considered for filter",
+            "required": true,
+            "default": "publish",
+            "explode": "true",
+            "enum": [
+              "publish",
+              "draft"
+            ],
             "in": "query"
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/posts/findByCategory": {
+      "get": {
+        "tags": [
+          "Posts"
+        ],
+        "summary": "Find blog posts by category",
+        "description": "<p>To see a list of all the available categories, make a GET request to <i>/categories</i>.</p>",
+        "parameters": [
+          {
+            "name": "category",
+            "type": "query",
+            "description": "Category value that need to be considered for filter",
+            "required": true,
+            "default": "miscellaneous",
+            "explode": "true",
+            "in": "query"
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/comments/{commentId}": {
+      "put": {
+        "tags": [
+          "Comments"
+        ],
+        "summary": "Update an existing comment",
+        "description": "<p>You can only update comments you",
+        "parameters": [
+          {
+            "name": "commentId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/updateComment"
+            }
+          }
+        ],
+        "responses": {}
+      },
+      "delete": {
+        "tags": [
+          "Comments"
+        ],
+        "summary": "Delete a comment",
+        "description": "<p>You can only delete comments you",
+        "parameters": [
+          {
+            "name": "commentId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/comments/{postId}": {
+      "get": {
+        "tags": [
+          "Comments"
+        ],
+        "summary": "Get all the comments for a particular post",
+        "description": "<p>Get all the comments for a post by passing in the id of the post.</p>",
+        "parameters": [
+          {
+            "name": "postId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/tags": {
+      "get": {
+        "tags": [
+          "Tags"
+        ],
+        "summary": "Get all the tags",
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/tags/{tagId}": {
+      "get": {
+        "tags": [
+          "Tags"
+        ],
+        "summary": "Get a tag by id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "tagId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      },
+      "put": {
+        "tags": [
+          "Tags"
+        ],
+        "summary": "Update an existing tag",
+        "description": "",
+        "parameters": [
+          {
+            "name": "tagId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/updateTag"
+            }
+          }
+        ],
+        "responses": {}
+      },
+      "delete": {
+        "tags": [
+          "Tags"
+        ],
+        "summary": "Delete a tag",
+        "description": "",
+        "parameters": [
+          {
+            "name": "tagId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/categories": {
+      "get": {
+        "tags": [
+          "Categories"
+        ],
+        "summary": "Get all the categories",
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/categories/{categoryId}": {
+      "get": {
+        "tags": [
+          "Categories"
+        ],
+        "summary": "Get a category by id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "categoryId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      },
+      "put": {
+        "tags": [
+          "Categories"
+        ],
+        "summary": "Update an existing category",
+        "description": "<p><span style=\"color:red\"><b>Note:</b></span> Only admins have the authority to update existing categories.</p>",
+        "parameters": [
+          {
+            "name": "categoryId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/updateCategory"
+            }
+          }
+        ],
+        "responses": {}
+      },
+      "delete": {
+        "tags": [
+          "Categories"
+        ],
+        "summary": "Delete a category",
+        "description": "<p><span style=\"color:red\"><b>Note:</b></span> Only admins have the authority to delete a category.</p>",
+        "parameters": [
+          {
+            "name": "categoryId",
+            "in": "path",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {}
@@ -228,6 +495,19 @@
         "email",
         "password"
       ]
+    },
+    "updateUser": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "your full name"
+        },
+        "email": {
+          "type": "string",
+          "example": "email@example.com"
+        }
+      }
     },
     "addPost": {
       "type": "object",
@@ -353,7 +633,10 @@
           "type": "string",
           "example": "Name of the category"
         }
-      }
+      },
+      "required": [
+        "name"
+      ]
     },
     "addTag": {
       "type": "object",
@@ -405,55 +688,6 @@
       ],
       "items": {
         "type": "string"
-      }
-    },
-    "statuses": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string",
-          "example": "status"
-        },
-        "in": {
-          "type": "string",
-          "example": "query"
-        },
-        "description": {
-          "type": "string",
-          "example": "Status values that need to be considered for filter"
-        },
-        "required": {
-          "type": "boolean",
-          "example": false
-        },
-        "explode": {
-          "type": "boolean",
-          "example": true
-        },
-        "schema": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "default": {
-              "type": "string",
-              "example": "available"
-            },
-            "enum": {
-              "type": "array",
-              "example": [
-                "available",
-                "pending",
-                "sold"
-              ],
-              "items": {
-                "type": "string"
-              }
-            }
-          }
-        }
       }
     }
   }
